src/ciaaw_saw_2021.f90


!> promethium.
type(element_t_2021), parameter, public :: Pm_2021 =&
element_t_2021("promethium","Pm", 61, nan, nan, nan, nan, nan, nan)
!> C API promethium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pm_2021") :: capi_Pm_2021 =&
capi_element_t_2021(&
["p","r","o","m","e","t","h","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","m",c_null_char, " "," "," "," "," "," "], &
Pm_2021%z, &
Pm_2021%saw_max, Pm_2021%saw_min, Pm_2021%saw, Pm_2021%saw_u, Pm_2021%asaw, Pm_2021%asaw_u)

!> samarium.
type(element_t_2021), parameter, public :: Sm_2021 =&
element_t_2021("samarium","Sm", 62, nan, nan, 150.36d0, 0.02d0, 150.36d0, 0.02d0)
!> C API samarium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Sm_2021") :: capi_Sm_2021 =&
capi_element_t_2021(&
["s","a","m","a","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","m",c_null_char, " "," "," "," "," "," "], &
Sm_2021%z, &
Sm_2021%saw_max, Sm_2021%saw_min, Sm_2021%saw, Sm_2021%saw_u, Sm_2021%asaw, Sm_2021%asaw_u)

!> europium.
type(element_t_2021), parameter, public :: Eu_2021 =&
element_t_2021("europium","Eu", 63, nan, nan, 151.964d0, 0.001d0, 151.96d0, 0.01d0)
!> C API europium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Eu_2021") :: capi_Eu_2021 =&
capi_element_t_2021(&
["e","u","r","o","p","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["E","u",c_null_char, " "," "," "," "," "," "], &
Eu_2021%z, &
Eu_2021%saw_max, Eu_2021%saw_min, Eu_2021%saw, Eu_2021%saw_u, Eu_2021%asaw, Eu_2021%asaw_u)

!> gadolinium.
type(element_t_2021), parameter, public :: Gd_2021 =&
element_t_2021("gadolinium","Gd", 64, nan, nan, 157.25d0, 0.03d0, 157.25d0, 0.03d0)
!> C API gadolinium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Gd_2021") :: capi_Gd_2021 =&
capi_element_t_2021(&
["g","a","d","o","l","i","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","d",c_null_char, " "," "," "," "," "," "], &
Gd_2021%z, &
Gd_2021%saw_max, Gd_2021%saw_min, Gd_2021%saw, Gd_2021%saw_u, Gd_2021%asaw, Gd_2021%asaw_u)

!> terbium.
type(element_t_2021), parameter, public :: Tb_2021 =&
element_t_2021("terbium","Tb", 65, nan, nan, 158.925354d0, 0.000007d0, 158.93d0, 0.01d0)
!> C API terbium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Tb_2021") :: capi_Tb_2021 =&
capi_element_t_2021(&
["t","e","r","b","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","b",c_null_char, " "," "," "," "," "," "], &
Tb_2021%z, &
Tb_2021%saw_max, Tb_2021%saw_min, Tb_2021%saw, Tb_2021%saw_u, Tb_2021%asaw, Tb_2021%asaw_u)

!> dysprosium.
type(element_t_2021), parameter, public :: Dy_2021 =&
element_t_2021("dysprosium","Dy", 66, nan, nan, 162.500d0, 0.001d0, 162.50d0, 0.01d0)
!> C API dysprosium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Dy_2021") :: capi_Dy_2021 =&
capi_element_t_2021(&
["d","y","s","p","r","o","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["D","y",c_null_char, " "," "," "," "," "," "], &
Dy_2021%z, &
Dy_2021%saw_max, Dy_2021%saw_min, Dy_2021%saw, Dy_2021%saw_u, Dy_2021%asaw, Dy_2021%asaw_u)

!> holmium.
type(element_t_2021), parameter, public :: Ho_2021 =&
element_t_2021("holmium","Ho", 67, nan, nan, 164.930329d0, 0.000005d0, 164.93d0, 0.01d0)
!> C API holmium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ho_2021") :: capi_Ho_2021 =&
capi_element_t_2021(&
["h","o","l","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","o",c_null_char, " "," "," "," "," "," "], &
Ho_2021%z, &
Ho_2021%saw_max, Ho_2021%saw_min, Ho_2021%saw, Ho_2021%saw_u, Ho_2021%asaw, Ho_2021%asaw_u)

!> erbium.
type(element_t_2021), parameter, public :: Er_2021 =&
element_t_2021("erbium","Er", 68, nan, nan, 167.259d0, 0.003d0, 167.26d0, 0.01d0)
!> C API erbium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Er_2021") :: capi_Er_2021 =&
capi_element_t_2021(&
["e","r","b","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["E","r",c_null_char, " "," "," "," "," "," "], &
Er_2021%z, &
Er_2021%saw_max, Er_2021%saw_min, Er_2021%saw, Er_2021%saw_u, Er_2021%asaw, Er_2021%asaw_u)

!> thulium.
type(element_t_2021), parameter, public :: Tm_2021 =&
element_t_2021("thulium","Tm", 69, nan, nan, 168.934219d0, 0.000005d0, 168.93d0, 0.01d0)
!> C API thulium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Tm_2021") :: capi_Tm_2021 =&
capi_element_t_2021(&
["t","h","u","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","m",c_null_char, " "," "," "," "," "," "], &
Tm_2021%z, &
Tm_2021%saw_max, Tm_2021%saw_min, Tm_2021%saw, Tm_2021%saw_u, Tm_2021%asaw, Tm_2021%asaw_u)

!> ytterbium.
type(element_t_2021), parameter, public :: Yb_2021 =&
element_t_2021("ytterbium","Yb", 70, nan, nan, 173.045d0, 0.010d0, 173.05d0, 0.02d0)
!> C API ytterbium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Yb_2021") :: capi_Yb_2021 =&
capi_element_t_2021(&
["y","t","t","e","r","b","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Y","b",c_null_char, " "," "," "," "," "," "], &
Yb_2021%z, &
Yb_2021%saw_max, Yb_2021%saw_min, Yb_2021%saw, Yb_2021%saw_u, Yb_2021%asaw, Yb_2021%asaw_u)

!> lutetium.
type(element_t_2021), parameter, public :: Lu_2021 =&
element_t_2021("lutetium","Lu", 71, nan, nan, 174.9668d0, 0.0001d0, 174.97d0, 0.01d0)
!> C API lutetium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Lu_2021") :: capi_Lu_2021 =&
capi_element_t_2021(&
["l","u","t","e","t","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","u",c_null_char, " "," "," "," "," "," "], &
Lu_2021%z, &
Lu_2021%saw_max, Lu_2021%saw_min, Lu_2021%saw, Lu_2021%saw_u, Lu_2021%asaw, Lu_2021%asaw_u)

!> hafnium.
type(element_t_2021), parameter, public :: Hf_2021 =&
element_t_2021("hafnium","Hf", 72, nan, nan, 178.486d0, 0.006d0, 178.49d0, 0.01d0)
!> C API hafnium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Hf_2021") :: capi_Hf_2021 =&
capi_element_t_2021(&
["h","a","f","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","f",c_null_char, " "," "," "," "," "," "], &
Hf_2021%z, &
Hf_2021%saw_max, Hf_2021%saw_min, Hf_2021%saw, Hf_2021%saw_u, Hf_2021%asaw, Hf_2021%asaw_u)

!> tantalum.
type(element_t_2021), parameter, public :: Ta_2021 =&
element_t_2021("tantalum","Ta", 73, nan, nan, 180.94788d0, 0.00002d0, 180.95d0, 0.01d0)
!> C API tantalum.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ta_2021") :: capi_Ta_2021 =&
capi_element_t_2021(&
["t","a","n","t","a","l","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","a",c_null_char, " "," "," "," "," "," "], &
Ta_2021%z, &
Ta_2021%saw_max, Ta_2021%saw_min, Ta_2021%saw, Ta_2021%saw_u, Ta_2021%asaw, Ta_2021%asaw_u)

!> tungsten.
type(element_t_2021), parameter, public :: W_2021 =&
element_t_2021("tungsten","W", 74, nan, nan, 183.84d0, 0.01d0, 183.84d0, 0.01d0)
!> C API tungsten.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_W_2021") :: capi_W_2021 =&
capi_element_t_2021(&
["t","u","n","g","s","t","e","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["W",c_null_char, " "," "," "," "," "," "," "], &
W_2021%z, &
W_2021%saw_max, W_2021%saw_min, W_2021%saw, W_2021%saw_u, W_2021%asaw, W_2021%asaw_u)

!> rhenium.
type(element_t_2021), parameter, public :: Re_2021 =&
element_t_2021("rhenium","Re", 75, nan, nan, 186.207d0, 0.001d0, 186.21d0, 0.01d0)
!> C API rhenium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Re_2021") :: capi_Re_2021 =&
capi_element_t_2021(&
["r","h","e","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","e",c_null_char, " "," "," "," "," "," "], &
Re_2021%z, &
Re_2021%saw_max, Re_2021%saw_min, Re_2021%saw, Re_2021%saw_u, Re_2021%asaw, Re_2021%asaw_u)

!> osmium.
type(element_t_2021), parameter, public :: Os_2021 =&
element_t_2021("osmium","Os", 76, nan, nan, 190.23d0, 0.03d0, 190.23d0, 0.03d0)
!> C API osmium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Os_2021") :: capi_Os_2021 =&
capi_element_t_2021(&
["o","s","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O","s",c_null_char, " "," "," "," "," "," "], &
Os_2021%z, &
Os_2021%saw_max, Os_2021%saw_min, Os_2021%saw, Os_2021%saw_u, Os_2021%asaw, Os_2021%asaw_u)

!> iridium.
type(element_t_2021), parameter, public :: Ir_2021 =&
element_t_2021("iridium","Ir", 77, nan, nan, 192.217d0, 0.002d0, 192.22d0, 0.01d0)
!> C API iridium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ir_2021") :: capi_Ir_2021 =&
capi_element_t_2021(&
["i","r","i","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["I","r",c_null_char, " "," "," "," "," "," "], &
Ir_2021%z, &
Ir_2021%saw_max, Ir_2021%saw_min, Ir_2021%saw, Ir_2021%saw_u, Ir_2021%asaw, Ir_2021%asaw_u)

!> platinum.
type(element_t_2021), parameter, public :: Pt_2021 =&
element_t_2021("platinum","Pt", 78, nan, nan, 195.084d0, 0.009d0, 195.08d0, 0.02d0)
!> C API platinum.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Pt_2021") :: capi_Pt_2021 =&
capi_element_t_2021(&
["p","l","a","t","i","n","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","t",c_null_char, " "," "," "," "," "," "], &
Pt_2021%z, &
Pt_2021%saw_max, Pt_2021%saw_min, Pt_2021%saw, Pt_2021%saw_u, Pt_2021%asaw, Pt_2021%asaw_u)

!> gold.
type(element_t_2021), parameter, public :: Au_2021 =&
element_t_2021("gold","Au", 79, nan, nan, 196.966570d0, 0.000004d0, 196.97d0, 0.01d0)
!> C API gold.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Au_2021") :: capi_Au_2021 =&
capi_element_t_2021(&
["g","o","l","d",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","u",c_null_char, " "," "," "," "," "," "], &
Au_2021%z, &
Au_2021%saw_max, Au_2021%saw_min, Au_2021%saw, Au_2021%saw_u, Au_2021%asaw, Au_2021%asaw_u)

!> mercury.
type(element_t_2021), parameter, public :: Hg_2021 =&
element_t_2021("mercury","Hg", 80, nan, nan, 200.592d0, 0.003d0, 200.59d0, 0.01d0)
!> C API mercury.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Hg_2021") :: capi_Hg_2021 =&
capi_element_t_2021(&
["m","e","r","c","u","r","y",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","g",c_null_char, " "," "," "," "," "," "], &
Hg_2021%z, &
Hg_2021%saw_max, Hg_2021%saw_min, Hg_2021%saw, Hg_2021%saw_u, Hg_2021%asaw, Hg_2021%asaw_u)

!> thallium.
type(element_t_2021), parameter, public :: Tl_2021 =&
element_t_2021("thallium","Tl", 81, 204.382d0, 204.385d0, 204.3835d0, 0.0009d0, 204.38d0, 0.01d0)
!> C API thallium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Tl_2021") :: capi_Tl_2021 =&
capi_element_t_2021(&
["t","h","a","l","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","l",c_null_char, " "," "," "," "," "," "], &
Tl_2021%z, &
Tl_2021%saw_max, Tl_2021%saw_min, Tl_2021%saw, Tl_2021%saw_u, Tl_2021%asaw, Tl_2021%asaw_u)
